# http-traffic-sim

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  NO_HARDCODED_LIMITS.md  PERFORMANCE_BASELINE.md  PERFORMANCE_TUNING.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE3_TEST_PLAN.md  PHASE3_TEST_REPORT.md  PHASE4_CHECKLIST.md  PHASE4_COMPLETION.md  PHASE4_FINAL_REPORT.md  PHASE4_PLAN.md  PHASE4_PROGRESS.md  PORT_DISCOVERY_QUICKSTART.md  README.md  REFACTOR_PLAN.md  REMOVE_AUTHORIZATION_PLAN.md  TEST_RESULTS.md  TROUBLESHOOTING.md  config.discovery-auto-detect.example.yaml  config.discovery-fail-test.yaml  config.discovery-multi-port-test.yaml  config.discovery-scan.example.yaml  config.discovery-test.yaml  config.discovery-validate.example.yaml  config.discovery-warn-test.yaml  config.example.yaml  config.multi-target-discovery.example.yaml  config.multi-target.example.yaml  config.stress-flood.example.yaml  config.stress-largepayload.example.yaml  config.stress-requestflood.example.yaml  config.stress-slowloris.example.yaml  config.weighted.example.yaml  run_discovery_tests.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
benches/: discovery_bench.rs  metrics_bench.rs
docs/: DOCUMENTATION.md  END_TO_END_BENCHMARKS.md  PROFILING_QUICKSTART.md  PROFILING_SESSION.md
scripts/: bench.sh  profile.sh  quick_wins.sh  setup-hooks.sh
src/: authorization.rs  client.rs  config.rs  discovery.rs  lib.rs  main.rs  metrics.rs  patterns.rs  reporter.rs  run.rs  stats.rs  stress.rs  target_selector.rs
tests/: client_integration_test.rs  (+5 more)
(+1 files in other folders)
