[package]
name = "http-traffic-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# Metrics & Statistics
hdrhistogram = "7.5"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
futures = "0.3"
